--- a/styles.css
+++ b/styles.css
@@ -1051,6 +1051,10 @@ input[type='color']::-webkit-color-swatch {
   min-height: 0;
 }
 
+.right-panel-section-scroll {
+  min-height: 0;
+}
+
 .pane-collapsed {
   width: var(--pane-collapsed-width);
 }
@@ -1729,7 +1733,7 @@ input[type='color']::-webkit-color-swatch {
   :root {
     --pane-left-width: min(88vw, 340px);
     --pane-right-width: min(88vw, 340px);
-    --pane-collapsed-width: 0px;
+    --pane-collapsed-width: 40px;
   }
 
   #app-header {
@@ -1772,10 +1776,19 @@ input[type='color']::-webkit-color-swatch {
     border-left-width: 1px;
   }
 
+  .mobile-layout .right-panel-section-scroll {
+    max-height: min(22vh, 180px);
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .mobile-layout .right-panel-section-primary {
+    max-height: min(42vh, 320px);
+  }
+
   .mobile-layout .auto-collapsed .pane:not(.pane-force-open),
   .mobile-layout .pane.pane-collapsed {
-    width: 0;
-    border-width: 0;
+    width: var(--pane-collapsed-width);
     box-shadow: none;
   }
 }
